# machine-identity-discovery

./: .env  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  machine-identity-discovery.code-workspace  pyproject.toml
.github/workflows/: test.yml
agents/ai-agent/: Dockerfile  entrypoint.sh  ossec.conf
agents/cicd-runner/: Dockerfile  entrypoint.sh  ossec.conf
agents/cloud-workload/: Dockerfile  entrypoint.sh  ossec.conf
agents/k8s-node/: Dockerfile  entrypoint.sh  ossec.conf
agents/vulnerable-app/: Dockerfile  entrypoint.sh  ossec.conf
api/: Dockerfile  config.py  main.py  requirements.txt
api/models/: __init__.py  alerts.py  rules.py  scenarios.py
api/routes/: alerts.py  health.py  rules.py  scenarios.py
api/services/: scenario_loader.py  wazuh_client.py
docs/: NHI-Security-Handbook-Complete.md  NHI-Security-Handbook.html  spiffe-spire-attack-techniques.md
docs/handbook/: 00-introduction.md  01-architecture.md  02-installation.md  03-wazuh-rules-reference.md  04-scenario-catalog.md  05-detection-playbook.md  06-remediation-guide.md  07-extending-testbed.md  08-troubleshooting.md
docs/ndc-talk/: backup-plan.md  demo-script.md  presentation-outline.md  speaker-notes.md
helm/nhi-testbed/: Chart.yaml  values.yaml
mock-services/cicd-server/: Dockerfile  requirements.txt  server.py
mock-services/gcp-metadata/: Dockerfile  requirements.txt  server.py
mock-services/imds/: Dockerfile  requirements.txt  server.py
mock-services/oauth-provider/: Dockerfile  requirements.txt  server.py
mock-services/spire-simulator/: Dockerfile  spire_log_gen.py
monitoring/prometheus/: prometheus.yml
ocsf/: event-mapping.yml
scenarios/category-1-secrets/: s1-01-hardcoded-credentials.json  s1-02-exposed-env-file.json  s1-03-git-history-leak.json  s1-04-proc-environ-exposure.json  s1-05-kubernetes-config-discovery.json
scenarios/category-2-cloud/: s2-01-imds-credential-theft.json  s2-02-overpermissioned-iam-role.json  s2-03-cross-account-role-abuse.json  s2-04-service-account-key-exfil.json  s2-05-vault-token-theft.json
scenarios/category-3-cicd/: s3-01-stolen-runner-token.json  s3-02-pipeline-injection.json  s3-03-oidc-token-abuse.json  s3-04-vault-privilege-escalation.json  s3-05-multiple-credential-harvest.json
scenarios/category-4-kubernetes/: s4-01-privileged-pod-escape.json  s4-02-service-account-token-theft.json  s4-03-rbac-misconfiguration.json  s4-04-mounted-secrets.json  s4-05-api-key-abuse.json
scenarios/category-5-ai-agents/: s5-01-prompt-injection-cred-disclosure.json  s5-02-excessive-agent-permissions.json  s5-03-tool-use-ssrf.json  s5-04-context-poisoning.json
scenarios/category-6-infrastructure/: s6-01-oauth-consent-phishing.json  s6-02-github-app-token-theft.json  s6-03-workload-identity-federation-abuse.json  s6-04-terraform-state-exposure.json  s6-05-k8s-etcd-direct-access.json
scenarios/category-7-spiffe-spire/: s7-01-selector-spoofing.json  (+2 more)
scripts/: build_rule_pack.py  offensive-demo.sh  scan_secrets.sh  scheduler.py  sigma_convert.py  spire_identity_monitor.py  start.sh  stop.sh
tests/: __init__.py  conftest.py  pytest.ini  requirements.txt
(+209 files in other folders)
